# Flanger_2.0

./: .gitignore  CLAUDE.md  CMakeLists.txt  Flanger_2.jucer
.claude/: settings.local.json
.github/workflows/: build-macos-arm64.yml  build-macos-x86_64.yml  build-windows.yml
CMAKE/: SOURCES.cmake  TESTS.cmake
HELPER_SCRIPTS/: README.txt  addClass.py  addFunction.py  add_test_tag.py  build_app.py  build_au.py  build_complete.py  build_standalone.py  build_tests.py  build_vst3.py  init_project.py  rebuild_all.py  regenSource.py  update_version.py
INSTALLERS/PC/: Flanger 2.iss
Source/: DelayBase.h  LFOSliders.cpp  LFOSliders.h  MenuFeel.cpp  MixFeel.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetMenu.cpp  PresetMenu.h  TapeReel.cpp  TapeReel.h
Source/Components/: LFOSliders.h  PluginEditor.cpp  PluginEditor.h  PresetMenu.cpp  PresetMenu.h  TapeReel.cpp  TapeReel.h
Source/LookNFeel/: MenuFeel.cpp  MenuFeel.h  MixFeel.cpp  MixFeel.h
Source/Processor/: DelayBase.h  PluginProcessor.cpp  PluginProcessor.h
Source/Util/: Version.h  WaveTable.h
