cmake_minimum_required(VERSION 3.24.1)

# Read version from VERSION.txt
file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.txt" VERSION_STRING)
string(STRIP "${VERSION_STRING}" VERSION_STRING)

# Parse version components
string(REPLACE "." ";" VERSION_LIST ${VERSION_STRING})
list(GET VERSION_LIST 0 PROJECT_VERSION_MAJOR)
list(GET VERSION_LIST 1 PROJECT_VERSION_MINOR)
list(GET VERSION_LIST 2 PROJECT_VERSION_PATCH)

# LANGUAGES must include C — required by JUCE on macOS/Xcode
project(Flanger2 VERSION ${VERSION_STRING} LANGUAGES C CXX)

# C++ Standard
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Find Python — resolves to python3 on macOS/Linux, python on Windows
find_package(Python3 REQUIRED)

# JUCE setup
add_subdirectory(SUBMODULES/JUCE)

# Plugin formats — add AU only on macOS
if(APPLE)
    set(FORMATS VST3 AU Standalone)
else()
    set(FORMATS VST3 Standalone)
endif()

# Version header generation
add_custom_target(update_version_header
    COMMAND ${Python3_EXECUTABLE} "${CMAKE_CURRENT_SOURCE_DIR}/HELPER_SCRIPTS/update_version.py"
            "${CMAKE_CURRENT_SOURCE_DIR}/VERSION.txt"
            "${CMAKE_CURRENT_SOURCE_DIR}/SOURCE/Util/Version.h"
    BYPRODUCTS "${CMAKE_CURRENT_SOURCE_DIR}/SOURCE/Util/Version.h"
    COMMENT "Updating version header"
)

# Plugin configuration
juce_add_plugin(Flanger2
    COMPANY_NAME "recluse-audio"
    BUNDLE_ID com.recluseaudio.flanger2
    PLUGIN_MANUFACTURER_CODE Rcls
    PLUGIN_CODE Fl2g
    FORMATS ${FORMATS}
    PRODUCT_NAME "Flanger 2"
    NEEDS_MIDI_INPUT FALSE
    NEEDS_MIDI_OUTPUT FALSE
    IS_MIDI_EFFECT FALSE
    IS_SYNTH FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS FALSE
    COPY_PLUGIN_AFTER_BUILD FALSE
    VST3_CATEGORIES "Fx Modulation"
)

juce_generate_juce_header(Flanger2)

juce_add_binary_data(Flanger2BinaryData
    SOURCES ASSETS/FlangerTape.png
)

# Source files (auto-generated by regenSource.py)
include(CMAKE/SOURCES.cmake)
target_sources(Flanger2 PRIVATE ${SOURCES})

target_include_directories(Flanger2 PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/SOURCE
)

add_dependencies(Flanger2 update_version_header)

target_compile_features(Flanger2 PRIVATE cxx_std_20)

# Link JUCE modules
target_link_libraries(Flanger2
    PRIVATE
        juce::juce_audio_utils
        juce::juce_audio_processors
        juce::juce_dsp
        Flanger2BinaryData
    PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
        juce::juce_recommended_warning_flags
)

target_compile_definitions(Flanger2
    PUBLIC
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0
        JUCE_MODAL_LOOPS_PERMITTED=1
        JUCE_REPORT_APP_USAGE=0
)

if(MSVC)
    target_compile_options(Flanger2 PRIVATE /W4 /wd4244)
else()
    target_compile_options(Flanger2 PRIVATE -Wall -Wextra -Wpedantic)
endif()

#==============================================================================
# Tests (optional)
#==============================================================================
option(BUILD_TESTS "Build unit tests" OFF)

if(BUILD_TESTS OR TARGET Tests)
    include(FetchContent)

    FetchContent_Declare(
        Catch2
        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
        GIT_TAG v3.1.0
    )
    FetchContent_MakeAvailable(Catch2)

    add_executable(Tests)
    include(CMAKE/TESTS.cmake)
    include(CMAKE/SOURCES.cmake)
    target_sources(Tests PRIVATE ${TEST_SOURCES} ${SOURCES})

    target_include_directories(Tests PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/SOURCE
        ${CMAKE_BINARY_DIR}/Flanger2_artefacts/JuceLibraryCode
    )

    target_link_libraries(Tests PRIVATE
        Catch2::Catch2WithMain
        juce::juce_audio_utils
        juce::juce_audio_processors
        juce::juce_dsp
        Flanger2BinaryData
    )

    target_compile_features(Tests PRIVATE cxx_std_20)

    if(MSVC)
        target_compile_options(Tests PRIVATE /FS)
    endif()

    target_compile_definitions(Tests PRIVATE
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0
        JUCE_MODAL_LOOPS_PERMITTED=1
        JUCE_REPORT_APP_USAGE=0
        JucePlugin_Name="Flanger 2"
        JucePlugin_WantsMidiInput=0
        JucePlugin_ProducesMidiOutput=0
        JucePlugin_IsMidiEffect=0
        JucePlugin_IsSynth=0
    )

    add_dependencies(Tests Flanger2)

    include(CTest)
    include(Catch)
    catch_discover_tests(Tests)
endif()
